bindings: Merge ConstructorForTypeSlowCase and ContructorPlainType

We had ConstructorPlainType in V8ContextSnapshots.cpp independent from
V8PerContextData::ConstructorForTypeSlowCase only not to use cached one.
So they are almost copy of each other.

This CL makes the common part as an independent function, and make old two
functions to use the new one for their main tasks.


Bug: 788644
Change-Id: I782a48668b2d9716c0919413bfcb515424a06d98
Reviewed-on: https://chromium-review.googlesource.com/795282
Commit-Queue: Hitoshi Yoshida <peria@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520552}
Former-commit-id: f47b361887a31cccf42a6e21a82bccf28372bdaa